style: changing font color

--- a/index.html
+++ b/index.html
@@ -1,82 +1,178 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dromos Infraestrutura</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
     <header>
-        <div class="contact">
-            <span>(11) 3040-2260</span>
+        <div class="container">
+            <div class="social">
+                <a href="https://www.facebook.com/profile.php?id=1977013302604458&_rdr" target="_blank">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/5eca7cfe-351e-4ae4-8fcd-5f4bc29b27cc"
+                        class="social-border" alt="Social">
+                </a>
+                <a href="https://www.castilho.com.br/" target="_blank">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/0cbb87f5-7176-433e-87f7-d1ee47bc2007"
+                        class="social-border contrast">
+                </a>
+
+                <a href="https://www.linkedin.com/company/castilho-engenharia-e-empreendimentos-s-a/mycompany/"
+                    target="_blank">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/2ceffa99-da7c-4ad3-9841-2db5660d4a9d"
+                        class="social-border contrast">
+                </a>
+            </div>
+            <div class="contact">
+                <img
+                    src="https://github.com/paolarosa/projetoCastilho/assets/108689859/ec2dc0c3-703a-4012-9911-d64992d422c5">
+                <span>(11) 3040-2260</span>
+            </div>
         </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#">Página Inicial</a></li>
-        </ul>
-    </nav>
 
-    <section id="intro">
-        <p>Comprometida com a minimização dos impactos ambientais, alia a alta capacidade técnica à tecnologia avançada com o objetivo de racionalizar recursos e reduzir custos operacionais, prevenir acidentes, cumprir a legislação ambiental e outros requisitos. A empresa atua em grande parte do território nacional, em diversas regiões brasileiras e também em toda a América Latina.</p>
-    </section>
+    <div class="initialPage">
+        <section id="intro">
+            <div class="logo-container">
+                <img src="images/dromos-logo.jpg" alt="Logo">
+            </div>
+            <div class="titleSection">
+                <p>Comprometida com a minimização dos impactos ambientais, alia a alta capacidade técnica à tecnologia
+                    avançada com o objetivo de racionalizar recursos e reduzir custos operacionais, prevenir acidentes,
+                    cumprir a legislação ambiental e outros requisitos. A empresa atua em grande parte do território
+                    nacional, em diversas regiões brasileiras e também em toda a América Latina.</p>
+            </div>
+        </section>
 
-    <section id="services">
-        <div class="service">
-            <img src="minas.jpg" alt="Minas">
-            <p>Minas</p>
-        </div>
-        <div class="service">
-            <img src="infraestrutura.jpg" alt="Infraestrutura Marítima">
-            <p>Infraestrutura Marítima</p>
-        </div>
-        <div class="service">
-            <img src="saneamento.jpg" alt="Saneamento">
-            <p>Saneamento</p>
-        </div>
-        <div class="service">
-            <img src="civil.jpg" alt="Construção Civil Industrial">
-            <p>Construção Civil Industrial</p>
-        </div>
-        <div class="service">
-            <img src="contencoes.jpg" alt="Contenções e Obras de Arte">
-            <p>Contenções e Obras de Arte</p>
-        </div>
-        <div class="service">
-            <img src="implantacao.jpg" alt="Implantação e Adequação">
-            <p>Implantação e Adequação</p>
-        </div>
-    </section>
+        <section id="services">
+            <div class="slider-wrapper">
+                <div class="service">
+                    <img src="images/tunel.png" alt="Minas">
+                    <p>TÚNEIS</p>
+                </div>
+                <div class="service">
+                    <img src="images/infraestrutura.png" alt="Infraestrutura Marítima">
+                    <p>Infraestrutura Marítima</p>
+                </div>
+                <div class="service">
+                    <img src="images/saneamento.png" alt="Saneamento">
+                    <p>Saneamento</p>
+                </div>
+                <div class="service">
+                    <img src="images/construcaocivil.png" alt="Construção Civil Industrial">
+                    <p>Construção Civil Industrial</p>
+                </div>
+                <div class="service">
+                    <img src="images/contecao.png" alt="Contenções e Obras de Arte">
+                    <p>Contenções e Obras de Arte</p>
+                </div>
+                <div class="service">
+                    <img src="images/implantacao.png" alt="Implantação e Adequação">
+                    <p>Implantação e Adequação</p>
+                </div>
+            </div>
+        </section>
+    </div>
+
 
     <section id="team">
-        <h2>Nossa Equipe</h2>
-        <p>Nossa equipe é composta por profissionais altamente qualificados que planejam, gerenciam e executam obras nos mais variados segmentos da Engenharia Civil de grande porte.</p>
-        <p>Além de excelente conhecimento técnico, constante aprimoramento profissional e foco em excelência de resultados, temos como princípios o comprometimento, o respeito e a satisfação do cliente.</p>
-
-        <div class="responsibility">
-            <h3>Responsabilidade Social</h3>
-            <p>Através do entendimento da importância do nosso papel na construção da sociedade, a Dromos busca impactar positivamente, tanto os nossos colaboradores que, de alguma forma, sejam como clientes, fornecedores, ou membros das comunidades existentes nas cidades em que atuamos, buscamos pautar todas as nossas relações através de uma atmosfera de respeito pelas pessoas e também pelos valores, que servem como alicerces das relações sociais existentes.</p>
+        <div class="firstSectionTeam">
+            <h2>Nossa Equipe</h2>
+            <p>Nossa equipe é composta por profissionais altamente qualificados que planejam, gerenciam e executam obras
+                nos mais variados segmentos da Engenharia Civil de grande porte.</p>
+            <p>Além de excelente conhecimento técnico, constante aprimoramento profissional e foco em excelência de
+                resultados, temos como princípios o comprometimento, o respeito e a satisfação do cliente.</p>
         </div>
 
-        <div class="responsibility">
-            <h3>Responsabilidade Socioambiental</h3>
-            <p>A Dromos entende que a responsabilidade socioambiental consiste em um conjunto de ações e iniciativas que garantam que suas atividades e operações tenham um impacto positivo tanto na sociedade quanto no meio ambiente. Por isso, adotamos ações ativas e que geram resultados práticos.</p>
-            <ul>
-                <li>Utilização de matérias primas de procedência ambiental;</li>
-            </ul>
+        <div class="titleSocial">
+            <div class="titleSocialResponsability">
+                <h3>Responsabilidade Social</h3>
+            </div>
+
+            <div class="titleSocialenviromentResponsibility">
+                <h3>Responsabilidade Socioambiental</h3>
+            </div>
+
+        </div>
+
+        <div class="secondSectionTeam">
+
+            <div class="socialResponsibility">
+                <p>Através do entendimento da importância do nosso papel na construção da sociedade, a Dromos busca
+                    impactar positivamente, tanto os nossos colaboradores que, de alguma forma, sejam como clientes,
+                    fornecedores, ou membros das comunidades existentes nas cidades em que atuamos, buscamos pautar
+                    todas as nossas relações através de uma atmosfera de respeito pelas pessoas e também pelos valores,
+                    que servem como alicerces das relações sociais existentes.</p>
+            </div>
+
+            <div class="socialenviromentResponsibility">
+                <p>A Dromos entende que a responsabilidade socioambiental consiste em um conjunto de ações e iniciativas
+                    que garantam que suas atividades e operações tenham um impacto positivo tanto na sociedade quanto no
+                    meio ambiente. Por isso, adotamos ações ativas e que geram resultados práticos.</p>
+
+                <p>Utilização de matérias primas de procedência ambiental;</p>
+
+            </div>
+
         </div>
     </section>
 
     <section id="about">
-        <h2>Sobre Nós</h2>
-        <p>A DROMOS alia alta capacidade técnica à mais avançada tecnologia com o objetivo de racionalizar recursos, reduzir custos operacionais, prevenir acidentes, cumprir a legislação ambiental e outros requisitos. por meio de uma Política de Qualidade e Meio Ambiente, executa projetos monitorados sob rigorosos indicadores de desempenho e normas técnicas.</p>
-        <img src="about.jpg" alt="Sobre nós">
+        <div class="about-container">
+            <div class="about-text">
+                <h2>Sobre Nós</h2>
+                <p>A DROMOS alia alta capacidade técnica à mais avançada tecnologia com o objetivo de racionalizar
+                    recursos,
+                    reduzir custos operacionais, prevenir acidentes, cumprir a legislação ambiental e outros requisitos.
+                    por
+                    meio de uma Política de Qualidade e Meio Ambiente, executa projetos monitorados sob rigorosos
+                    indicadores de
+                    desempenho e normas técnicas.</p>
+            </div>
+            <div class="about-image">
+                <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/1b1b33f5-8f59-4853-9bb0-15feb3569341"
+                    alt="Sobre nós">
+            </div>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Dromos Infraestrutura. Todos os direitos reservados.</p>
+        <div class="footer-container">
+            <h2>Contato</h2>
+            <div class="cards">
+                <div class="card">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/464cbe66-c75f-4ff8-a272-0710d68a8c44"
+                        alt="Email" class="contact-img">
+                    <h3>E-Mail</h3>
+                    <a href="mailto:contato@dromosinfra.com.br">contato@dromosinfra.com.br</a>
+                </div>
+                <div class="card">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/07d55bc5-17b5-4406-b1bd-52c92b0ed151"
+                        alt="Telefone" class="contact-img">
+                    <h3>Telefone</h3>
+                    <a>(11) 3040-2260</a>
+                </div>
+                <div class="card">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/66972678-421f-42be-aea1-d1a841dba02a"
+                        alt="Endereço" class="contact-img">
+                    <h3>Endereço</h3>
+                    <a href="https://www.google.com/maps/search/Av.+C%C3%A2ndido+de+Abreu+N%C2%B0+70+-Sala+01+T%C3%A9rreo/@-25.4239709,-49.2719068,17z/data=!3m1!4b1?entry=ttu"
+                        target="_blank">Rua
+                        Gomes de Carvalho,1507 – CJ 22B – Vila Olímpia - SP</a>
+                </div>
+            </div>
+            <p>&copy; 2024 Dromos Infraestrutura. Todos os direitos reservados.</p>
+        </div>
     </footer>
+    <script src="script.js"></script>
 </body>
+
 </html>
