--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dromos Infraestrutura</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+    <script src="script.js"></script>
 
 </head>
 
@@ -14,7 +16,6 @@
     <header>
         <div class="container">
             <div class="social">
-
                 <a href="#">
                     <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/5eca7cfe-351e-4ae4-8fcd-5f4bc29b27cc"
                         class="social-border" alt="Social">
@@ -55,7 +56,7 @@
             <div class="slider-wrapper">
                 <div class="service">
                     <img src="images/tunel.png" alt="Minas">
-                    <p>TÚNEIS</p>
+                    <p>Túneis</p>
                 </div>
                 <div class="service">
                     <img src="images/infraestrutura.png" alt="Infraestrutura Marítima">
@@ -66,7 +67,7 @@
                     <p>Saneamento</p>
                 </div>
                 <div class="service">
-                    <img src="images/construcaocivil.png" alt="Construção Civil Industrial">
+                    <img src="images/construcaocivil.jpeg" alt="Construção Civil Industrial">
                     <p>Construção Civil Industrial</p>
                 </div>
                 <div class="service">
@@ -91,20 +92,13 @@
                 resultados, temos como princípios o comprometimento, o respeito e a satisfação do cliente.</p>
         </div>
 
-        <div class="titleSocial">
-            <div class="titleSocialResponsability">
-                <h3>Responsabilidade Social</h3>
-            </div>
-
-            <div class="titleSocialenviromentResponsibility">
-                <h3>Responsabilidade Socioambiental</h3>
-            </div>
-
-        </div>
 
         <div class="secondSectionTeam">
 
             <div class="socialResponsibility">
+                <div class="titleSocialResponsability">
+                    <h3>Responsabilidade Social</h3>
+                </div>
                 <p>Através do entendimento da importância do nosso papel na construção da sociedade, a Dromos busca
                     impactar positivamente, tanto os nossos colaboradores que, de alguma forma, sejam como clientes,
                     fornecedores, ou membros das comunidades existentes nas cidades em que atuamos, buscamos pautar
@@ -113,12 +107,15 @@
             </div>
 
             <div class="socialenviromentResponsibility">
+                <div class="titleSocialenviromentResponsibility">
+                    <h3>Responsabilidade Socioambiental</h3>
+                </div>
                 <p>A Dromos entende que a responsabilidade socioambiental consiste em um conjunto de ações e iniciativas
                     que garantam que suas atividades e operações tenham um impacto positivo tanto na sociedade quanto no
                     meio ambiente. Por isso, adotamos ações ativas e que geram resultados práticos.</p>
-                
-                    <p>Utilização de matérias primas de procedência ambiental;</p>
-                
+
+                <p>Utilização de matérias primas de procedência ambiental;</p>
+
             </div>
 
         </div>
@@ -137,7 +134,8 @@
                     desempenho e normas técnicas.</p>
             </div>
             <div class="about-image">
-                <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/1b1b33f5-8f59-4853-9bb0-15feb3569341" alt="Sobre nós">
+                <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/1b1b33f5-8f59-4853-9bb0-15feb3569341"
+                    alt="Sobre nós">
             </div>
         </div>
     </section>
@@ -147,17 +145,20 @@
             <h2>Contato</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/464cbe66-c75f-4ff8-a272-0710d68a8c44" alt="Email" class="contact-img">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/464cbe66-c75f-4ff8-a272-0710d68a8c44"
+                        alt="Email" class="contact-img">
                     <h3>E-Mail</h3>
                     <a href="#">contato@dromosinfra.com.br</a>
                 </div>
                 <div class="card">
-                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/07d55bc5-17b5-4406-b1bd-52c92b0ed151" alt="Telefone" class="contact-img">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/07d55bc5-17b5-4406-b1bd-52c92b0ed151"
+                        alt="Telefone" class="contact-img">
                     <h3>Telefone</h3>
                     <a>(11) 3040-2260</a>
                 </div>
                 <div class="card">
-                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/66972678-421f-42be-aea1-d1a841dba02a" alt="Endereço" class="contact-img">
+                    <img src="https://github.com/paolarosa/projetoCastilho/assets/108689859/66972678-421f-42be-aea1-d1a841dba02a"
+                        alt="Endereço" class="contact-img">
                     <h3>Endereço</h3>
                     <a href="#">Rua
                         Gomes de Carvalho,1507 – CJ 22B – Vila Olímpia - SP</a>
@@ -166,7 +167,6 @@
             <p class="direitosReservados">&copy; 2024 Dromos Infraestrutura. Todos os direitos reservados.</p>
         </div>
     </footer>
-    <script src="script.js"></script>
 </body>
 
 </html>
